src/objects/AuthorisedStates__mdt.object
<CustomObject>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPurchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPurchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRefinance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRefinance</label>
        <type>Checkbox</type>
    </fields>
    <label>HECMStates</label>
    <pluralLabel>AuthorisedStates</pluralLabel>
    <listViews>
        <fullName>All_1</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>isActive__c</columns>
        <columns>isPurchase__c</columns>
        <columns>isRefinance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_</label>
    </listViews>
</CustomObject>